<resources>
    <string name="app_name">Bus Application</string>
    <string name="welcome">Welcome</string>

    <string name="email">Email </string>
    <string name="password">Password</string>
    <string name="login">Login </string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_driver">Sign up as a driver</string>
    <string name="sign_up_client">Sign up as a client</string>
    <string name="user_exists">User with this username already exists</string>

    <string name="sign_up_success">Registration successful</string>
    <string name="auth_failed">Wrong username or password</string>
    <string name="auth_success">Sign in success</string>
    <string name="sign_out">Sign out</string>
    <string name="logout_success">Logout success</string>
    <string name="mapChange">Edit route </string>
    <string name="firstName">First name </string>
    <string name="lastName">Last name </string>
    <string name="age">Age </string>
    <string name="busSeatsSize">"Seats number "</string>
    <string name="userDetails">Details</string>
    <string name="databaseError">Database connection error</string>
    <string name="networkError">Network connection not available</string>
    <string name="create_account">Create Account</string>
    <string name="password2">Confirm Password</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="create_request">Create request</string>
    <string name="request_to">Request to</string>
    <string name="choose_location">Choose location</string>
    <string name="send_request">Send request</string>
    <string name="comments">Comments</string>
    <string name="request_success">Request created successfuly</string>
    <string name="provide_location">Please provide location</string>
    <string name="save_route">Save route</string>
    <string name="prompt_exit">Press back again to exit</string>
    <string name="routes_list">Routes list</string>
    <string name="routes_list_empty">No routes available</string>
    <string name="api_key">AIzaSyCcf-Q27CEW5Uj90qOuNsXhQcI0tHinJYM</string>
    <string name="add_point">Add point to route</string>
    <string name="remove_point_question">Do you want to remove the point?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="new_route">Add new route</string>
    <string name="select_route">Select route</string>
    <string name="route_history">From history</string>
    <string name="trunkCapacity">Trunk capacity</string>
    <string name="salonCapacity">Salon trunk capacity</string>
    <string name="seatsNumber">Number of seats</string>
    <string name="minimumSeatsNumber">Minimum number of seats to go</string>
    <string name="minimumSeatsNumberShortened">Min seats number</string>
    <string name="modify">Modify</string>
    <string name="allSeats">General seats</string>
    <string name="goToBusDetails">Next: go to Bus Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="passengers">Passengers number</string>
    <string name="trunkSize">Trunk size</string>
    <string name="salonTrunk">Salon trunk size</string>
    <string name="creation_date">Creation date</string>
    <string name="status">Status</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="request_list">Request list</string>
    <string name="start_route">Start route</string>
    <string name="finish_route">Finish route</string>
    <string name="added_request_notification">%1$s added a request.</string>
    <string name="request_details">Request details</string>
    <string name="cancelled_request_notification">%1$s cancelled a request.</string>
    <string name="approved_request_notification">%1$s approved your request.</string>
    <string name="rejected_request_notification">%1$s rejected your request.</string>
    <string name="closed">Closed</string>
    <string name="driver_near_start_point_notification">%1$s is near requested starting point.</string>
    <string name="driver_client_is_near_notification">%1$s waits about 100m from you.</string>

</resources>
