<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="1"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_weight="0.3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/firstName"
                android:layout_weight="30"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lastName"
                android:layout_weight="30"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <EditText
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:layout_weight="30"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:ems="10"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/seatsNumberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seatsNumber"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_weight="0.01"/>

    <vkalashnykov.org.busapplication.components.MySeekbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/seatsNumber"
        android:layout_weight="0.1">
    </vkalashnykov.org.busapplication.components.MySeekbar>

    <TextView
        android:id="@+id/trunkCapacityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trunkCapacity"
        android:gravity="center"
        android:layout_weight="0.01"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <vkalashnykov.org.busapplication.components.MySeekbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/trunkCapacity"
        android:layout_weight="0.1">

    </vkalashnykov.org.busapplication.components.MySeekbar>
    <TextView
        android:id="@+id/salonTrunkCapacityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salonCapacity"
        android:layout_weight="0.01"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <vkalashnykov.org.busapplication.components.MySeekbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/salonCapacity"
        android:layout_weight="0.1">
    </vkalashnykov.org.busapplication.components.MySeekbar>

    <TextView
        android:id="@+id/minimumSeatsNumberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minimumSeatsNumber"
        android:layout_weight="0.01"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <vkalashnykov.org.busapplication.components.MySeekbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/minimumSeatsNumber"
        android:layout_weight="0.1">
    </vkalashnykov.org.busapplication.components.MySeekbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:weightSum="100" android:orientation="horizontal">
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/cancel"
            android:onClick="cancel"/>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/submit"
            android:onClick="saveDetails"/>
    </LinearLayout>

</LinearLayout>

</android.support.constraint.ConstraintLayout>