<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vkalashnykov.org.busapplication.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">


        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/password2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/passwordInput2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/firstName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/lastName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:text="@string/age"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <EditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:ems="10"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <Button
            android:id="@+id/goToBusDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="goToBusDetails"
            android:text="@string/goToBusDetails" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
